--- a/frontend/src/pages/genres.module.css
+++ b/frontend/src/pages/genres.module.css
@@ -171,7 +171,13 @@ h2 {
   background: #ffffff;
   border-radius: 15px;
   margin-top: 1rem;
-  padding: 1rem;
+  max-width: 100%;
+  min-width: 100%;
+}
+
+.mostPopularSongsContainer h2 {
+  font-size: 1.5rem;
+  max-width: 10ch;
 }
 
 .mostPopularSongsCoverSong {
@@ -190,9 +196,6 @@ h2 {
   display: flex;
   flex-direction: column;
   align-items: flex-start;
-}
-.mostPopularSongsText p {
-  padding: 0;
 }
 
 .playButton {
@@ -217,6 +220,7 @@ h2 {
 
 .spotifyIconLittle {
   align-self: flex-end;
+  margin: 1rem;
 }
 
 .shuffle {
@@ -225,34 +229,119 @@ h2 {
   gap: 0.5rem;
   padding: rem;
   width: 8rem;
+  margin: 1rem;
+  align-self: center;
 }
 
 .trending {
   background: #302518;
   color: #f5f5f5;
-  padding: 1.5rem;
+  height: auto;
+  padding-bottom: 4rem;
 }
 
 .trendingArtistsContainer {
-  display: flex;
-  flex-direction: row;
-  gap: 0.5rem;
+  display: grid;
+  grid-template-columns: 1fr 1fr;
 }
 
 #trendingImg {
-  width: 50%;
+  width: 100%;
+  -webkit-box-shadow: inset 0 0 10px 10px blue;
+  -moz-box-shadow: inset 0 0 10px 10px blue;
+  box-shadow: inset 0 0 10px 10px blue;
 }
 
-.trendingArtistsDiv {
+.h2trend {
+  padding-top: 1.5rem;
+  padding-bottom: 2rem;
+  padding-left: 1.5rem;
+  padding-right: 1.5rem;
+}
+
+.trendingtext {
+  position: relative;
+  top: 85%;
+  left: 5%;
+  font-family: var(--fontNoto);
+  font-size: 12px;
+  height: 0;
+  font-weight: 700;
+}
+
+.trendingtext2 {
+  position: relative;
+  top: 90%;
+  left: 5%;
+  font-family: var(--fontNoto);
+  font-size: 10px;
+  height: 0;
+}
+
+.trendingArtistsDiv:nth-child(5) {
+  display: none;
+}
+
+.trendingArtistsContainerhid {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+}
+
+.trendingtexthid {
+  position: relative;
+  top: 85%;
+  left: 5%;
+  font-family: var(--fontNoto);
+  font-size: 12px;
+  height: 0;
+  font-weight: 700;
+}
+
+.trendingtext2hid {
+  position: relative;
+  top: 90%;
+  left: 5%;
+  font-family: var(--fontNoto);
+  font-size: 10px;
+  height: 0;
+}
+
+.btn3 {
+  box-sizing: border-box;
+  height: 10vw;
+  width: 10vw;
+  border-style: solid;
+  border-color: white;
+  border-width: 0px 2px 2px 0px;
+  transform: rotate(45deg);
+  transition: border-width 150ms ease-in-out;
+  margin-top: 3rem;
+  margin-left: 45%;
+  background-color: #302518;
+}
+
+.btn3:hover {
+  border-bottom-width: 5px;
+  border-right-width: 5px;
+}
+
+#trendingImg:hover {
+  opacity: 0.3;
+}
+
+footer {
   text-align: center;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-}
-
-.trendingArtistsDiv .spotifyIcon {
-  align-self: center;
+  padding: 1rem;
+  position: sticky;
+  top: 100vh;
+  background-image: linear-gradient(
+      #302518 0.48%,
+      rgba(84, 78, 70, 0.565217) 33.2%,
+      rgba(141, 138, 133, 0.322174) 59.48%,
+      rgba(161, 159, 155, 0.237391) 100%,
+      rgba(217, 217, 217, 0) 2.64%
+    ),
+    url(src/assets/backgroundWall.png);
 }
 
 footer {
@@ -268,6 +357,60 @@ background-image: linear-gradient(#302518 0.48%, rgba(84, 78, 70, 0.565217) 33.2
 */
 
 /*--------Fonts Tablet/Desktop-----------*/
+
+@media screen and (max-width: 440px) {
+  .trendingtext {
+    position: relative;
+    top: 85%;
+    left: 5%;
+    font-family: var(--fontNoto);
+    font-size: 8px;
+    height: 0;
+    font-weight: 700;
+  }
+
+  .trendingtext2 {
+    position: relative;
+    top: 90%;
+    left: 5%;
+    font-family: var(--fontNoto);
+    font-size: 6px;
+    height: 0;
+  }
+
+  .trendingtexthid {
+    position: relative;
+    top: 85%;
+    left: 5%;
+    font-family: var(--fontNoto);
+    font-size: 8px;
+    height: 0;
+    font-weight: 700;
+  }
+
+  .trendingtext2hid {
+    position: relative;
+    top: 90%;
+    left: 5%;
+    font-family: var(--fontNoto);
+    font-size: 6px;
+    height: 0;
+  }
+
+  .btn3 {
+    box-sizing: border-box;
+    height: 12vw;
+    width: 12vw;
+    border-style: solid;
+    border-color: white;
+    border-width: 0px 2px 2px 0px;
+    transform: rotate(45deg);
+    transition: border-width 150ms ease-in-out;
+    margin-top: 3rem;
+    margin-left: 45%;
+    background-color: #302518;
+  }
+}
 
 @media screen and (min-width: 600px) {
   h1 {
@@ -330,8 +473,8 @@ background-image: linear-gradient(#302518 0.48%, rgba(84, 78, 70, 0.565217) 33.2
   }
 
   .trending {
-    padding-left: 5rem;
-    padding-right: 5rem;
+    padding-left: 0rem;
+    padding-right: 0rem;
   }
 
   #popularCoverAndPopularText {
@@ -353,10 +496,136 @@ background-image: linear-gradient(#302518 0.48%, rgba(84, 78, 70, 0.565217) 33.2
   .spotifyIconLittle {
     display: none;
   }
+
+  .trendingArtistsContainer {
+    display: grid;
+    grid-template-columns: 2fr 1fr 1fr;
+    grid-template-rows: 1fr 1fr;
+  }
+
+  .trendingArtistsDiv:nth-child(1) {
+    width: 100%;
+    grid-column-start: 1;
+    grid-column-end: 2;
+    grid-row-start: 1;
+    grid-row-end: 3;
+  }
+  .trendingArtistsDiv:nth-child(2) {
+    width: 100%;
+    grid-column-start: 3;
+    grid-column-end: 4;
+    grid-row-start: 1;
+    grid-row-end: 2;
+  }
+  .trendingArtistsDiv:nth-child(3) {
+    width: 100%;
+    grid-column-start: 2;
+    grid-column-end: 3;
+    grid-row-start: 1;
+    grid-row-end: 2;
+  }
+  .trendingArtistsDiv:nth-child(4) {
+    width: 100%;
+    grid-column-start: 2;
+    grid-column-end: 3;
+    grid-row-start: 2;
+    grid-row-end: 3;
+  }
+  .trendingArtistsDiv:nth-child(5) {
+    display: block;
+    width: 100%;
+    grid-column-start: 3;
+    grid-column-end: 4;
+    grid-row-start: 2;
+    grid-row-end: 3;
+  }
+  .trendingArtistsContainerhid {
+    display: none;
+  }
+
+  .trending {
+    padding-bottom: 2rem;
+  }
+  .trendingtext {
+    position: relative;
+    top: 80%;
+    left: 5%;
+    font-family: var(--fontNoto);
+    font-size: 12px;
+    height: 0;
+    font-weight: 700;
+  }
+
+  .trendingtext2 {
+    position: relative;
+    top: 88%;
+    left: 5%;
+    font-family: var(--fontNoto);
+    font-size: 10px;
+    height: 0;
+  }
+
+  .trendingArtistsDiv:nth-child(1) .trendingtext {
+    position: relative;
+    top: 85%;
+    left: 5%;
+    font-family: var(--fontNoto);
+    font-size: 14px;
+    height: 0;
+  }
+
+  .trendingArtistsDiv:nth-child(1) .trendingtext2 {
+    position: relative;
+    top: 90%;
+    left: 5%;
+    font-family: var(--fontNoto);
+    font-size: 12px;
+    height: 0;
+  }
+
+  .btn3 {
+    display: none;
+  }
 }
 
 @media screen and (min-width: 1000px) {
   .rockImg img {
     width: 30rem;
+  }
+  .trendingtext {
+    position: relative;
+    top: 80%;
+    left: 5%;
+    font-family: var(--fontNoto);
+    font-size: 16px;
+    height: 0;
+    font-weight: 700;
+  }
+
+  .trendingtext2 {
+    position: relative;
+    top: 88%;
+    left: 5%;
+    font-family: var(--fontNoto);
+    font-size: 14px;
+    height: 0;
+  }
+
+  .trendingArtistsDiv:nth-child(1) .trendingtext {
+    position: relative;
+    top: 85%;
+    left: 5%;
+    font-family: var(--fontNoto);
+    font-size: 22px;
+    height: 0;
+  }
+
+  .trendingArtistsDiv:nth-child(1) .trendingtext2 {
+    position: relative;
+    top: 90%;
+    left: 5%;
+    font-family: var(--fontNoto);
+    font-size: 20px;
+    height: 0;
   }
 }
