--- a/frontend/src/components/WorldMusic.module.css
+++ b/frontend/src/components/WorldMusic.module.css
@@ -153,24 +153,28 @@ a:link {
 }
 
 .playButton {
-    position: absolute;
-    align-self: center;
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    -ms-transform: translate(-50%, -50%);
-    transition: 0.3s;
-    padding: 30px;
-    cursor: pointer;
-    background-image: url("./src/assets/musiQue-imgs/playButton.png");
-    background-size: cover;
-    background-repeat: no-repeat;
-    opacity: 0.6;
+  align-self: center;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  -ms-transform: translate(-50%, -50%);
+  transition: 0.3s;
+  padding: 30px;
+  cursor: pointer;
+  background: none;
+  border: 0;
+  background-image: url("./src/assets/musiQue-imgs/playButton.png");
+  background-size: cover;
+  background-repeat: no-repeat;
+  opacity: 0.6;
+}
+.playButton:active {
+  background-image: url("./src/assets/musiQue-imgs/STOP.png");
 }
 
 .playButton:hover {
-    opacity: 1;
+  opacity: 1;
 }
 
 @media screen and (min-width: 600px) {
