--- a/frontend/src/components/Aboutus.module.css
+++ b/frontend/src/components/Aboutus.module.css
@@ -121,3 +121,14 @@
   }
 
 }
+
+@media screen and (min-width: 1200px) {
+  .aboutustitle{
+    padding-left: 2rem;
+    padding-right: 2rem;
+  }
+  .aboutustext{
+    padding-left: 2rem;
+    padding-right: 2rem;
+  }
+}
