--- a/frontend/src/components/Header.module.css
+++ b/frontend/src/components/Header.module.css
@@ -69,7 +69,18 @@ margin-right:2.75rem;
   }
 
 
+  @media screen and (min-width: 700px) {
+    .headerFirsttext{
+    text-align:left;
+    max-width: 550px;
+    }
 
+    .headerSecondtext{
+      text-align:left;
+      max-width: 550px;
+    }
+
+  }
 
 @media screen and (min-width: 1000px) {
   .header {
@@ -80,8 +91,8 @@ margin-right:2.75rem;
     margin-top: 5rem;
     color: white;
     margin-bottom: 3.125rem;
-    text-align:left;
-    width:55%;
+    
+    max-width: 55%;
     font-size: 2.25rem;
     line-height: 3.125rem;
     }
@@ -91,10 +102,10 @@ margin-right:2.75rem;
       color: white;
       margin-right: 20rem;
       margin-bottom: 31.25rem;
-      text-align:left;
+      
       font-size: 1.5rem;
       line-height: 2rem;
-      width:55%;
+      max-width: 55%;
     }
   
     .image2 {
@@ -102,4 +113,18 @@ margin-right:2.75rem;
       width:10rem;
     }
 
+}
+
+
+@media screen and (min-width: 1200px) {
+  .headerFirsttext{
+    padding-left: 2rem;
+    padding-right: 2rem;
+    max-width: 60%;
+  }
+  .headerSecondtext{
+    padding-left: 2rem;
+    padding-right: 2rem;
+    max-width: 60%;
+  }
 }
