--- a/frontend/src/components/Recommended.module.css
+++ b/frontend/src/components/Recommended.module.css
@@ -216,6 +216,13 @@ audio {
   .rec {
     gap: 0 calc(5px + 20%);
     max-width: 1600px;
-    padding-left: 3rem;
+    padding-left: 5rem;
+    padding-right: 5rem;
   }
+
+  .sectionHeadline{
+    padding-left: 5rem;
+    padding-right:5rem;
+  }
+
 }
