--- a/frontend/src/components/trendingArtists.module.css
+++ b/frontend/src/components/trendingArtists.module.css
@@ -348,3 +348,14 @@
     }
 
   }
+
+
+
+
+
+  @media screen and (min-width: 1200px) {
+.trendingArtists{
+padding-left:5rem;
+padding-right:5rem;
+}
+  }
