Added functional stop button

--- a/frontend/src/components/WorldMusic.module.css
+++ b/frontend/src/components/WorldMusic.module.css
@@ -14,7 +14,7 @@ a:link {
   display: block;
   max-width: 100%;
   margin: 0 auto;
-  padding: 0 3rem;
+  /* padding: 0 3rem; */
 }
 
 .panel1,
@@ -170,8 +170,23 @@ a:link {
   background-repeat: no-repeat;
   opacity: 0.6;
 }
-.playButton:active {
+
+.playButtonActive {
+  align-self: center;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  -ms-transform: translate(-50%, -50%);
+  transition: 0.3s;
+  padding: 30px;
+  cursor: pointer;
+  background: none;
+  border: 0;
   background-image: url("./src/assets/musiQue-imgs/STOP.png");
+  background-size: cover;
+  background-repeat: no-repeat;
+  opacity: 0.6;
 }
 
 .playButton:hover {
@@ -210,5 +225,9 @@ a:link {
 @media screen and (min-width: 1200px) {
   .panel4 {
     display: inline;
+  }
+  
+  .panelContainer {
+    padding: 0 5rem;
   }
 }
