Font-Styles Correction (Genre Page)

--- a/frontend/src/pages/genres.module.css
+++ b/frontend/src/pages/genres.module.css
@@ -275,20 +275,22 @@ footer {
 
 .trendingtext {
   position: relative;
-  top: 85%;
+  top: 10%;
   left: 5%;
   font-family: var(--fontNoto);
-  font-size: 12px;
+  font-size: 16px;
   height: 0;
   font-weight: 700;
+  max-width: 20ch;
 }
 
 .trendingtext2 {
+  display: none;
   position: relative;
-  top: 90%;
+  top: 10%;
   left: 5%;
   font-family: var(--fontNoto);
-  font-size: 10px;
+  font-size: 14px;
   height: 0;
 }
 
@@ -303,20 +305,22 @@ footer {
 
 .trendingtexthid {
   position: relative;
-  top: 85%;
+  top: 10%;
   left: 5%;
   font-family: var(--fontNoto);
-  font-size: 12px;
+  font-size: 16px;
   height: 0;
   font-weight: 700;
+  max-width: 20ch;
 }
 
 .trendingtext2hid {
+  display: none;
   position: relative;
   top: 90%;
   left: 5%;
   font-family: var(--fontNoto);
-  font-size: 10px;
+  font-size: 14px;
   height: 0;
 }
 
@@ -353,39 +357,43 @@ background-image: linear-gradient(#302518 0.48%, rgba(84, 78, 70, 0.565217) 33.2
 @media screen and (max-width: 440px) {
   .trendingtext {
     position: relative;
-    top: 85%;
+    top: 10%;
     left: 5%;
     font-family: var(--fontNoto);
-    font-size: 8px;
+    font-size: 16px;
     height: 0;
     font-weight: 700;
+    max-width: 15ch;
   }
 
   .trendingtext2 {
+    display: none;
     position: relative;
-    top: 90%;
+    top: 85%;
     left: 5%;
     font-family: var(--fontNoto);
-    font-size: 6px;
+    font-size: 14px;
     height: 0;
   }
 
   .trendingtexthid {
     position: relative;
-    top: 85%;
+    top: 10%;
     left: 5%;
     font-family: var(--fontNoto);
-    font-size: 8px;
+    font-size: 16px;
     height: 0;
     font-weight: 700;
+    max-width: 15ch;
   }
 
   .trendingtext2hid {
+    display: none;
     position: relative;
-    top: 90%;
+    top: 85%;
     left: 5%;
     font-family: var(--fontNoto);
-    font-size: 6px;
+    font-size: 14px;
     height: 0;
   }
 
@@ -463,6 +471,52 @@ background-image: linear-gradient(#302518 0.48%, rgba(84, 78, 70, 0.565217) 33.2
   #popularCoverAndPopularText {
     gap: 5rem;
   }
+
+  .trendingtext {
+    position: relative;
+    top: 82%;
+    left: 5%;
+    font-family: var(--fontNoto);
+    font-size: 18px;
+    height: 0;
+    font-weight: 700;
+    max-width: 50ch;
+    
+  }
+
+  .trendingtext2 {
+    display: block;
+    position: relative;
+    top: 90%;
+    left: 5%;
+    font-family: var(--fontNoto);
+    font-size: 14px;
+    height: 0;
+  }
+
+  .trendingtexthid {
+    position: relative;
+    top: 82%;
+    left: 5%;
+    font-family: var(--fontNoto);
+    font-size: 18px;
+    height: 0;
+    font-weight: 700;
+    max-width: 50ch;
+    
+  }
+
+  .trendingtext2hid {
+    display: block;
+    position: relative;
+    top: 90%;
+    left: 5%;
+    font-family: var(--fontNoto);
+    font-size: 14px;
+    height: 0;
+  }
+
+
 }
 
 @media screen and (min-width: 500px) {
@@ -549,7 +603,7 @@ background-image: linear-gradient(#302518 0.48%, rgba(84, 78, 70, 0.565217) 33.2
     top: 85%;
     left: 5%;
     font-family: var(--fontNoto);
-    font-size: 14px;
+    font-size: 18px;
     height: 0;
   }
 
@@ -558,7 +612,7 @@ background-image: linear-gradient(#302518 0.48%, rgba(84, 78, 70, 0.565217) 33.2
     top: 90%;
     left: 5%;
     font-family: var(--fontNoto);
-    font-size: 12px;
+    font-size: 14px;
     height: 0;
   }
 
