--- a/frontend/src/pages/genres.module.css
+++ b/frontend/src/pages/genres.module.css
@@ -568,7 +568,7 @@ background-image: linear-gradient(#302518 0.48%, rgba(84, 78, 70, 0.565217) 33.2
 
   .trendingArtistsContainer > div {
     max-height: 100%;
-    overflow: initial;
+    /* overflow: initial; */
   }
 
   #mostPopularSongsImg {
@@ -579,10 +579,13 @@ background-image: linear-gradient(#302518 0.48%, rgba(84, 78, 70, 0.565217) 33.2
     display: grid;
     grid-template-columns: 2fr 1fr 1fr;
     grid-template-rows: 1fr 1fr;
+    height: auto;
+    max-height: 600px;
   }
 
   .trendingArtistsDiv:nth-child(1) {
     width: 100%;
+    max-height: 600px;
     grid-column-start: 1;
     grid-column-end: 2;
     grid-row-start: 1;
