--- a/frontend/src/pages/genres.module.css
+++ b/frontend/src/pages/genres.module.css
@@ -120,11 +120,11 @@ h2 {
   padding: 0;
 }
 
-.rockImg {
+.genresImg {
   display: none;
 }
 
-.rockImg img {
+.genresImg img {
   width: 20rem;
 }
 
@@ -282,9 +282,6 @@ h2 {
   width: 100%;
   height: 100%;
   min-height: 200px;
-  -webkit-box-shadow: inset 0 0 10px 10px blue;
-  -moz-box-shadow: inset 0 0 10px 10px blue;
-  box-shadow: inset 0 0 10px 10px blue;
 }
 
 footer {
@@ -562,8 +559,13 @@ background-image: linear-gradient(#302518 0.48%, rgba(84, 78, 70, 0.565217) 33.2
 }
 
 @media screen and (min-width: 800px) {
-  .rockImg {
+  .genresImg {
     display: contents;
+  }
+
+  .genresImg img {
+    min-height: 350px;
+    object-fit: cover;
   }
 
   .trendingArtistsContainer > div {
@@ -677,7 +679,7 @@ background-image: linear-gradient(#302518 0.48%, rgba(84, 78, 70, 0.565217) 33.2
 }
 
 @media screen and (min-width: 1000px) {
-  .rockImg img {
+  .genresImg img {
     width: 30rem;
   }
 
