Margin Correction (Genre Pages)

--- a/frontend/src/components/shuffleButton.module.css
+++ b/frontend/src/components/shuffleButton.module.css
@@ -23,7 +23,8 @@
   white-space: nowrap;
   will-change: box-shadow,transform;
   margin:auto;
-  margin-bottom: 2rem;
+  margin-bottom: 3rem;
+  margin-top: 2rem;
 
 }
 
