--- a/frontend/src/pages/genres.module.css
+++ b/frontend/src/pages/genres.module.css
@@ -146,9 +146,9 @@ h2 {
 
 .headerGenres {
   background: linear-gradient(270.64deg, #7755f9 -22.24%, #5f3971 109.3%);
-  padding-right: 1.5rem;
-  padding-left: 1.5rem;
-  padding-bottom: 1.5rem;
+  padding-right: 2rem;
+  padding-left: 2rem;
+  padding-bottom: 3rem;
 }
 
 .genreTextAndImg {
@@ -159,9 +159,9 @@ h2 {
 
 .mostPopular {
   background: #f6f6f6;
-  padding-right: 1.5rem;
-  padding-left: 1.5rem;
-  padding-top: 1.5rem;
+  padding-right: 2rem;
+  padding-left: 2rem;
+  padding-top: 2rem;
   display: flex;
   align-items: flex-start;
   flex-direction: column;
@@ -174,7 +174,7 @@ h2 {
   align-items: center;
   background: #ffffff;
   border-radius: 15px;
-  margin-top: 1rem;
+  margin-top: 1.5rem;
   min-width: 100%;
   padding: 1rem;
 }
@@ -265,11 +265,17 @@ h2 {
   color: #f5f5f5;
   height: auto;
   padding-bottom: 4rem;
+  padding-top: 2rem;
+}
+
+.trending .h2{
+  margin-left: 2rem;
 }
 
 .trendingArtistsContainer {
   display: grid;
   grid-template-columns: 1fr 1fr;
+  padding-top: 1.5rem;
 }
 
 .trendingArtistsContainer > div {
@@ -282,9 +288,7 @@ h2 {
   width: 100%;
   height: 100%;
   min-height: 200px;
-  -webkit-box-shadow: inset 0 0 10px 10px blue;
-  -moz-box-shadow: inset 0 0 10px 10px blue;
-  box-shadow: inset 0 0 10px 10px blue;
+
 }
 
 footer {
@@ -320,21 +324,25 @@ footer {
 
 .trendingtext {
   position: relative;
-  top: 85%;
+  top: 10%;
   left: 5%;
   font-family: var(--fontNoto);
-  font-size: 12px;
+  font-size: 16px;
   height: 0;
   font-weight: 700;
+  max-width: 20ch;
+  text-shadow: 1px 1px 2px #000000;
 }
 
 .trendingtext2 {
+  display: none;
   position: relative;
-  top: 90%;
+  top: 10%;
   left: 5%;
   font-family: var(--fontNoto);
-  font-size: 10px;
+  font-size: 14px;
   height: 0;
+  text-shadow: 1px 1px 2px #000000;
 }
 
 .trendingArtistsDiv:nth-child(5) {
@@ -369,21 +377,25 @@ footer {
 
 .trendingtexthid {
   position: relative;
-  top: 85%;
+  top: 10%;
   left: 5%;
   font-family: var(--fontNoto);
-  font-size: 12px;
+  font-size: 16px;
   height: 0;
   font-weight: 700;
+  max-width: 20ch;
+  text-shadow: 1px 1px 2px #000000;
 }
 
 .trendingtext2hid {
+  display: none;
   position: relative;
   top: 90%;
   left: 5%;
   font-family: var(--fontNoto);
-  font-size: 10px;
+  font-size: 14px;
   height: 0;
+  text-shadow: 1px 1px 2px #000000;
 }
 
 .btn3 {
@@ -418,39 +430,43 @@ background-image: linear-gradient(#302518 0.48%, rgba(84, 78, 70, 0.565217) 33.2
 @media screen and (max-width: 440px) {
   .trendingtext {
     position: relative;
-    top: 85%;
+    top: 10%;
     left: 5%;
     font-family: var(--fontNoto);
-    font-size: 8px;
+    font-size: 16px;
     height: 0;
     font-weight: 700;
+    max-width: 15ch;
   }
 
   .trendingtext2 {
+    display: none;
     position: relative;
-    top: 90%;
+    top: 85%;
     left: 5%;
     font-family: var(--fontNoto);
-    font-size: 6px;
+    font-size: 14px;
     height: 0;
   }
 
   .trendingtexthid {
     position: relative;
-    top: 85%;
+    top: 10%;
     left: 5%;
     font-family: var(--fontNoto);
-    font-size: 8px;
+    font-size: 16px;
     height: 0;
     font-weight: 700;
+    max-width: 15ch;
   }
 
   .trendingtext2hid {
+    display: none;
     position: relative;
-    top: 90%;
+    top: 85%;
     left: 5%;
     font-family: var(--fontNoto);
-    font-size: 6px;
+    font-size: 14px;
     height: 0;
   }
 
@@ -468,6 +484,9 @@ background-image: linear-gradient(#302518 0.48%, rgba(84, 78, 70, 0.565217) 33.2
     background-color: #302518;
   }
 }
+
+
+
 
 @media screen and (min-width: 600px) {
   h1 {
@@ -520,8 +539,8 @@ background-image: linear-gradient(#302518 0.48%, rgba(84, 78, 70, 0.565217) 33.2
   /*--------CSS for Genres Pages-----------*/
 
   .mostPopular {
-    padding-left: 5rem;
-    padding-right: 5rem;
+    padding-left: 3rem;
+    padding-right: 3rem;
   }
   .h2trend {
     padding-left: 5rem;
@@ -529,8 +548,8 @@ background-image: linear-gradient(#302518 0.48%, rgba(84, 78, 70, 0.565217) 33.2
   }
 
   .genreTextAndImg {
-    padding-left: 3.5rem;
-    padding-right: 3.5rem;
+    padding-left: 1rem;
+    padding-right: 1rem;
   }
 
   .genreText p {
@@ -550,6 +569,56 @@ background-image: linear-gradient(#302518 0.48%, rgba(84, 78, 70, 0.565217) 33.2
     gap: 5rem;
   }
 
+  .trendingtext {
+    position: relative;
+    top: 75%;
+    left: 5%;
+    font-family: var(--fontNoto);
+    font-size: 18px;
+    height: 0;
+    font-weight: 700;
+    max-width: 50ch;
+    
+  }
+
+  .trendingtext2 {
+    display: block;
+    position: relative;
+    top:87%;
+    left: 5%;
+    font-family: var(--fontNoto);
+    font-size: 14px;
+    height: 0;
+  }
+
+  .trendingtexthid {
+    position: relative;
+    top: 75%;
+    left: 5%;
+    font-family: var(--fontNoto);
+    font-size: 18px;
+    height: 0;
+    font-weight: 700;
+    max-width: 50ch;
+    
+  }
+
+  .trendingtext2hid {
+    display: block;
+    position: relative;
+    top: 87%;
+    left: 5%;
+    font-family: var(--fontNoto);
+    font-size: 14px;
+    height: 0;
+  }
+
+  .trending .h2{
+    margin-left: 3rem;
+  }
+
+
+
   #mostPopularSongsImg {
     width: 8rem;
   }
@@ -559,6 +628,8 @@ background-image: linear-gradient(#302518 0.48%, rgba(84, 78, 70, 0.565217) 33.2
   .mostPopularSongsContainer {
     width: 100%;
   }
+
+
 }
 
 @media screen and (min-width: 800px) {
@@ -648,7 +719,7 @@ background-image: linear-gradient(#302518 0.48%, rgba(84, 78, 70, 0.565217) 33.2
     top: 85%;
     left: 5%;
     font-family: var(--fontNoto);
-    font-size: 14px;
+    font-size: 18px;
     height: 0;
   }
 
@@ -657,10 +728,9 @@ background-image: linear-gradient(#302518 0.48%, rgba(84, 78, 70, 0.565217) 33.2
     top: 90%;
     left: 5%;
     font-family: var(--fontNoto);
-    font-size: 12px;
+    font-size: 14px;
     height: 0;
   }
-
   .btn3 {
     display: none;
   }
@@ -713,5 +783,22 @@ background-image: linear-gradient(#302518 0.48%, rgba(84, 78, 70, 0.565217) 33.2
     font-family: var(--fontNoto);
     font-size: 20px;
     height: 0;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .mostPopular {
+    padding-left: 5rem;
+    padding-right: 5rem;
+  }
+
+  .trending .h2{
+    margin-left: 5rem;
+  }
+
+  .headerGenres {
+    padding-right: 5rem;
+    padding-left: 5rem;
+   
   }
 }
