--- a/frontend/src/components/Genre.module.css
+++ b/frontend/src/components/Genre.module.css
@@ -27,7 +27,7 @@
   box-sizing: border-box;
   color: #4faeff;
   display: flex;
-  font-family: Phantomsans, sans-serif;
+  font-family: var(--fontNoto), sans-serif;
   font-size: 1.125rem;
   justify-content: center;
   line-height: 1em;
@@ -154,10 +154,6 @@
 }
 
 @media screen and (max-width: 439px) {
-
-
-
-  
   .btn {
     align-items: center;
     background-image: linear-gradient(
@@ -171,8 +167,8 @@
     box-sizing: border-box;
     color: #4faeff;
     display: flex;
-    font-family: Phantomsans, sans-serif;
-    font-size: 1.125rem;
+    font-family: var(--fontNoto);
+    font-size: 1rem;
     justify-content: center;
     line-height: 1em;
     width: auto;
@@ -368,7 +364,6 @@
   }
 
   .btn2:nth-child(1) {
-
     background-image: url(src/assets/genres/Rectangle14.png);
   }
 
