--- a/frontend/src/components/WorldMusic.module.css
+++ b/frontend/src/components/WorldMusic.module.css
@@ -15,7 +15,7 @@ a:link {
   max-width: 100%;
   margin: 0 auto;
   padding: 0 3rem;
-  margin-bottom: 4rem;
+  /* margin-bottom: 1rem; */
 }
 
 .panel1,
