--- a/frontend/src/components/WorldMusic.module.css
+++ b/frontend/src/components/WorldMusic.module.css
@@ -146,7 +146,7 @@ a:visited {
   cursor: pointer;
   background: none;
   border: 0;
-  background-image: url("./src/assets/musiQue-imgs/playButton.png");
+  background-image: url("../assets/musiQue-imgs/playButton.png");
   background-size: cover;
   background-repeat: no-repeat;
   opacity: 0.6;
@@ -164,7 +164,7 @@ a:visited {
   cursor: pointer;
   background: none;
   border: 0;
-  background-image: url("./src/assets/musiQue-imgs/STOP.png");
+  background-image: url("../assets/musiQue-imgs/STOP.png");
   background-size: cover;
   background-repeat: no-repeat;
   opacity: 0.6;
