--- a/frontend/src/pages/genres.module.css
+++ b/frontend/src/pages/genres.module.css
@@ -227,7 +227,7 @@ h2 {
   cursor: pointer;
   background: none;
   border: 0;
-  background-image: url("./src/assets/musiQue-imgs/playButton.png");
+  background-image: url("../assets/musiQue-imgs/playButton.png");
   background-size: cover;
   background-repeat: no-repeat;
   opacity: 0.6;
@@ -245,7 +245,7 @@ h2 {
   cursor: pointer;
   background: none;
   border: 0;
-  background-image: url("./src/assets/musiQue-imgs/STOP.png");
+  background-image: url("../assets/musiQue-imgs/STOP.png");
   background-size: cover;
   background-repeat: no-repeat;
   opacity: 0.6;
