removed prefix max on img sizes for media query

--- a/frontend/src/pages/genres.module.css
+++ b/frontend/src/pages/genres.module.css
@@ -639,8 +639,8 @@ background-image: linear-gradient(#302518 0.48%, rgba(84, 78, 70, 0.565217) 33.2
   }
 
   .genresImg img {
-    min-height: 350px;
-    min-width: 320px;
+    height: 350px;
+    width: 320px;
     object-fit: cover;
   }
 
